# Benchmark-Experiment-Host-Manager

./: .gitattributes  .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  benchbase.py  build.ps1  build.sh  cluster.py  conf.py  convert-to-lf.ps1  demo-tpch-k8s.py  docs.sh  example.py  experiment-example-AWS.py  experiment-example-k8s.py  hammerdb.py  index.rst  k8s-cluster.config  nohup.out  paper.bib  paper.md  pyproject.toml  replace-docs.py  requirements.txt  setup.py  show_resultfolder.py  simple_tpch.py  template-cluster.config  test-cloud-notes.sh  test-cloud.sh  test-current.sh  test-docs-appmetrics.sh  test-docs-benchbase-others.sh  test-docs-benchbase.sh  test-docs-cedardb.sh  test-docs-citus.sh  test-docs-cockroachdb.sh  test-docs-databaseservice.sh  test-docs-dragonfly.sh  (+22 more)
TPCTC23/: README.md  Series-4-1-TPC-H-Datageneration.ipynb  Series-4-2-TPC-H-Loading.ipynb  aws.bexhoma.cluster.yml  evaluator.py  experiment-1-ycsb.py  experiment-2-hammerdb.py  experiment-3-benchbase.py  experiment-4-1-tpch-generating-filesystem.py  experiment-4-2-tpch-loading-filesystem.py  experiment-4-3-tpch-benchmarking.py
bexhoma/: .gitignore  CLAUDE.md  __init__.py  cli_args.py  clusters.py  collectors.py  configurations.py  evaluator.py  evaluators.py  experiments.py  experiments_OLD.py  masterAWS.py  masterK8s.py  old_collectors.py  old_configurations.py
dev/: Benchbase-Merger-collector-MoreMetrics-MySQL-Copy1.ipynb  Benchbase-Merger-collector-MoreMetrics-MySQL.ipynb  Benchbase-Merger-collector-MoreMetrics-PostgreSQL.ipynb  Cluster-Nodes.ipynb  Collector-Benchbase.ipynb  Collector-HammerDB.ipynb  Collector-TPC-H-MT.ipynb  Collector-TPC-H-dev.ipynb  Collector-TPC-H.ipynb  (+58 more)
(+1589 files in other folders)
