[build-system]
requires        = ["setuptools>=67", "wheel"]
build-backend   = "setuptools.build_meta"

[project]
name            = "bexhoma"
dynamic         = ["version", "dependencies"]
description     = "This python tools helps managing DBMS benchmarking experiments in a Kubernetes-based HPC cluster environment. It enables users to configure hardware / software setups for easily repeating tests over varying configurations."
readme          = { file = "README.md", content-type = "text/markdown" }
license         = { text = "GNU Affero General Public License v3" }
requires-python = ">=3.10.2"
authors         = [
    { name = "Patrick K. Erdelt", email = "patrick.erdelt@bht-berlin.de" }
]
classifiers     = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage   = "https://github.com/Beuth-Erdelt/Benchmark-Experiment-Host-Manager"
Repository = "https://github.com/Beuth-Erdelt/Benchmark-Experiment-Host-Manager"

# ---- Console scripts ----
[project.scripts]
tpch         = "bexhoma.scripts.tpch:do_benchmark"
tpcds        = "bexhoma.scripts.tpcds:do_benchmark"
bexperiments = "bexhoma.scripts.experimentsmanager:manage"

# ---- setuptools configuration ----
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bexhoma*"]

# ---- Dynamic metadata sources ----
[tool.setuptools.dynamic]
version = { attr = "bexhoma.__version__.__version__" }
dependencies = { file = ["requirements.txt"] }
